--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@codemirror/view": "^6.37.2",
     "axios": "^1.9.0",
+    "codemirror": "^6.0.1",
     "element-plus": "^2.10.1",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.3",
+    "quill": "^2.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
