--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "quill": "^2.0.3",
     "sass": "^1.89.2",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "y-quill": "^1.0.0",
+    "y-webrtc": "^10.3.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
