--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.3",
     "quill": "^2.0.3",
+    "quill-cursors": "^4.0.4",
     "sass": "^1.89.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "y-quill": "^1.0.0",
     "y-webrtc": "^10.3.0",
+    "y-websocket": "^3.0.0",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
