--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "vue-router": "^4.5.0",
     "y-quill": "^1.0.0",
     "y-webrtc": "^10.3.0",
-    "y-websocket": "^3.0.0",
+    "y-websocket": "1.3",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
