--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.10.0",
     "codemirror": "^6.0.1",
     "element-plus": "^2.10.1",
+    "flexsearch": "^0.8.205",
     "normalize.css": "^8.0.1",
     "pinia": "^3.0.3",
     "quill": "^2.0.3",
